# openprofile-analytics

./: .env.example  README.md  docker-compose.yml  pyproject.toml
app/: app.py  routes.py  users.py
app/assets/css/: style.css
app/core/: config.py  db.py
app/templates/layouts/: _base.j2
app/templates/pages/: dashboard.j2  index.j2  register.j2
app/templates/partials/: _footer.j2  _header.j2  _line-chart.j2  _login.j2  _sidebar.j2  _stats.j2  _topics-chart.j2
services/data-preprocessor/: data_preprocessor.py  pyproject.toml
services/kick-chat-agent/: Dockerfile  README.md  kick_agent.py  pyproject.toml
services/topic-modeling/: main.py  pyproject.toml
services/twitch-chat-agent/: README.md  pyproject.toml  twitch_agent.py
