
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Karl Hendrik Soone", email = "karlhendrik.soone@proton.me"},
]
dependencies = [
    "fastapi>=0.98.0",
    "fastapi-users[sqlalchemy]>=12.0.0",
    "uvicorn[standard]>=0.22.0",
    "asyncpg>=0.27.0",
    "setuptools>=68.0.0",
    "sqlalchemy[asyncpg]>=2.0.17",
    "fastapi-mail>=1.3.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
