
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "karlhendrik", email = "karlhendrik.soone@proton.me"},
]
dependencies = [
    "redis>=4.6.0",
    "orjson>=3.9.1",
    "asyncio>=3.4.3",
    "rich>=13.4.2",
    "httpx>=0.24.1",
    "vaderSentiment>=3.3.2",
    "aiohttp>=3.8.4",
    "nltk>=3.8.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}
